--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 </head>
 
 <body>
-    <script src="Shape1.js">
+    <script src="Shape1.js"> 
+    // Change the Shape number in file e.g Shape1, Shape2 upto Shape6 to view the shapes
     </script>
 </body>
 
