--- a/index.html
+++ b/index.html
@@ -1,3 +1,8 @@
+<!--  
+Mahreen Athar
+19I-1712
+BS(DS-N) -->
+
 <!DOCTYPE html>
 <html>
 
@@ -10,8 +15,8 @@
 </head>
 
 <body>
-    <script src="Shape2.js"> 
-    // Change the Shape number in file e.g Shape1, Shape2 upto Shape6 to view the shapes
+    <script src="Shape1.js"> 
+    // Change the Shape number in file script above e.g Shape1, Shape2 upto Shape6 to view the shapes
     </script>
 </body>
 
